updated base64